# helix

./: Cargo.toml
book/src/: configuration.md  keymap.md
helix-term/src/: application.rs  commands.rs
helix-term/src/keymap/: default.rs
helix-term/src/ui/: editor.rs  explore.rs  mod.rs  prompt.rs
helix-view/src/: editor.rs
runtime/themes/: base16_default_dark.toml  base16_default_light.toml  bogster.toml  ingrid.toml
